2012-03-09  Corinna Vinschen  <corinna@vinschen.de>

	* hookapi.cc (find_first_notloaded_dll): Fix a compiler warning.

2012-03-09  Corinna Vinschen  <corinna@vinschen.de>

	* hookapi.cc (rvadelta): Add parameter to return maximum available
	size from start of import RVA table to end of section.
	(find_first_notloaded_dll): Take big executables into account.  Use
	offset and size computation as in hook_or_detect_cygwin, just simpler.
	(hook_or_detect_cygwin): Return NULL rather than false througout.
	Change computation of required mapping size to take non-gcc compilers
	into account.  Explain the differences and what we do against them.
	Don't alloca buf if fn is NULL.  Never use buf if fn is NULL.

2012-03-08  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (call_gaa): New thread function to call GetAdaptersAddresses.
	(get_adapters_addresses): Call call_gaa.  If necessary, call it as
	child thread.  Explain why that's necessary.

2012-03-08  Václav Zeman  <vhaisman@gmail.com>

	* path.cc (readlink): Avoid calling strlen() twice.

2012-03-07  Corinna Vinschen  <corinna@vinschen.de>

	* Throughout, replace usage of w32api's min with MIN from sys/param.h.

2012-03-07  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* pinfo.cc (_pinfo::dup_proc_pipe): Reorganize to provide more
	information for failing condition.
	(pinfo::wait): Pass name of function to dup_proc_pipe.  Eliminate error
	check for dup_proc_pipe since it never actually returned an error.
	* pinfo.h (_pinfo::dup_proc_pipe): Add an argument.
	* spawn.cc (child_info_spawn::worker): Pass name of function to
	dup_proc_pipe.

2012-03-07  Corinna Vinschen  <corinna@vinschen.de>

	* glob.cc (MAXPATHLEN): Reinstantiate with a value of 8192.

2012-03-05  Denis Excoffier  <cygwin@Denis-Excoffier.org>

	* pinfo.cc (_pinfo::dup_proc_pipe): Fix order of arguments in debug
	output.

2012-03-05  Corinna Vinschen  <corinna@vinschen.de>

	* init.cc (dll_entry): Move wincap.init call back from here...